# ckpool

./: .cproject  .project  CMakeLists.txt  README.md  ckpool.conf
scripts/: tls-setup.sh
src/: CMakeLists.txt  ckpool.c  ckpool.h  connector.c  sha2.c  sha2.h
